--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
 {lib_dirs, ["deps"]}.
 
 {deps, [
-        {etorrent_core, ".*", {git, "git@github.com:eryx67/etorrent_core.git",
+        {etorrent_core, ".*", {git, "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}}
        ]}.
 
