--- a/etracker.config
+++ b/etracker.config
@@ -8,7 +8,8 @@
    {db_module, etracker_mnesia},
    {answer_compact, false},
    {answer_max_peers, 50},
-   {answer_interval, 1800}
+   {answer_interval, 1800},
+   {scrape_request_interval, 1800}
   ]},
  {mnesia,
   [
