add peers expiring

--- a/etracker.config
+++ b/etracker.config
@@ -9,6 +9,7 @@
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
+   {clean_interval, 2700},
    {scrape_request_interval, 1800}
   ]},
  {mnesia,
