--- a/test.config
+++ b/test.config
@@ -9,6 +9,7 @@
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
+   {clean_interval, 2700},
    {scrape_request_interval, 1800}
   ]},
  {mnesia,
@@ -17,7 +18,7 @@
   ]},
  {lager,
   [{handlers,
-    [{lager_console_backend, [error, true]}
+    [{lager_console_backend, [info, true]}
  %%     {lager_file_backend,
  %%      [{"log/error.log", error, 10485760, "$D0", 5},
  %%       {"log/console.log", info, 10485760, "$D0", 5},
