--- a/etracker.config
+++ b/etracker.config
@@ -10,7 +10,8 @@
    {answer_max_peers, 50},
    {answer_interval, 1800},
    {clean_interval, 2700},
-   {scrape_request_interval, 1800}
+   {scrape_request_interval, 1800},
+   {www_dir, "www"}
   ]},
  {mnesia,
   [
