--- a/rebar.config
+++ b/rebar.config
@@ -11,8 +11,10 @@
 {lib_dirs, ["deps"]}.
 
 {deps, [
-        {etorrent_core, ".*", {git, "git://github.com/eryx67/etorrent_core.git",
-                               {branch, "upnp_fix"}}}
+        {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
+                               {branch, "upnp_fix"}}},
+        {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
+        {erlydtl, ".*", {git, "git://github.com/OJ/erlydtl.git", "HEAD"}}
        ]}.
 
 {sub_dirs, ["apps/etracker","rel"]}.
