--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -11,7 +11,8 @@
    {clean_interval, 2700},        % database garbage clearing interval
    {scrape_request_interval, 1800}, % minimum number of seconds to wait before
                                     % scraping the tracker again
-   {db_module, etracker_mnesia}  % which database module to use
+   {db_module, etracker_mnesia},    % which database module to use
+   {www_dir, "www"}
   ]},
  {mnesia,
   [
