--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -21,10 +21,10 @@
  {lager,                         % logger configuration
   [{handlers,
     [
-     {lager_console_backend, [debug, true]},          % [debug | info | error, true | false]
+     {lager_console_backend, [info, true]},          % [debug | info | error, true | false]
      {lager_file_backend,
       [ % comment lines you don't want logging for
-        {"log/debug.log", debug, 10485760, "$D0", 5},
+        % {"log/debug.log", debug, 10485760, "$D0", 5},
         {"log/info.log", info, 10485760, "$D0", 5},
         {"log/error.log", error, 10485760, "$D0", 5}
       ]}
