add timeout to wait mnesia startup

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -2,16 +2,20 @@
 [
   {etracker,
   [
-   {http_port, 8080},            % port to listen for requests
-   {http_ip, "127.0.0.1"},       % server address
-   {http_num_acceptors, 16},     % pool of request acceptors
-   {answer_compact, false},      % always return compact list of peers
-   {answer_max_peers, 50},       % max number of peers to return
-   {answer_interval, 1800},      % client interval value in answer to announce
-   {clean_interval, 2700},        % database garbage clearing interval
+   {http_port, 8080},               % port to listen for requests
+   {http_ip, "127.0.0.1"},          % server address
+   {http_num_acceptors, 16},        % pool of request acceptors
+   {answer_compact, false},         % always return compact list of peers
+   {answer_max_peers, 50},          % max number of peers to return
+   {answer_interval, 1800},         % client interval value in answer to announce
+   {clean_interval, 2700},          % database garbage clearing interval
    {scrape_request_interval, 1800}, % minimum number of seconds to wait before
                                     % scraping the tracker again
-   {db_module, etracker_mnesia},    % which database module to use
+   {db_module, {etracker_mnesia, []}}, % which database module to use and its options
+                                       % options for mnesia:
+                                       % [
+                                       % {timeout, 60000} how many seconds wait for tables
+                                       % ]
    {www_dir, "www"}
   ]},
  {mnesia,
