bug fixes and optimizations

--- a/etracker.config
+++ b/etracker.config
@@ -15,7 +15,9 @@
   ]},
  {mnesia,
   [
-   {dir, "data"}
+   {dir, "data"},
+   {dump_log_write_threshold, 50000},
+   {dc_dump_limit, 10}
   ]},
  {etorrent_core,
   [
