--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -20,12 +20,14 @@
   ]},
  {mnesia,
   [
-   {dir, "data"}                 % where to place database files
+   {dir, "data"},                 % where to place database files
+   {dump_log_write_threshold, 50000},
+   {dc_dump_limit, 10}
   ]},
  {lager,                         % logger configuration
   [{handlers,
     [
-     {lager_console_backend, [info, true]},          % [debug | info | error, true | false]
+     {lager_console_backend, [error, true]},          % [debug | info | error, true | false]
      {lager_file_backend,
       [ % comment lines you don't want logging for
         % {"log/debug.log", debug, 10485760, "$D0", 5},
