add cache for query results

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -16,6 +16,8 @@
                                        % [
                                        % {timeout, 60000} how many seconds wait for tables
                                        % ]
+   {db_cache_size, 1000000},  % entries
+   {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
    {www_dir, "www"}
   ]},
  {mnesia,
