--- a/etracker.config
+++ b/etracker.config
@@ -6,6 +6,8 @@
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
    {db_module, etracker_mnesia},
+   {db_cache_size, 1000000},  % entries
+   {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
