--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,7 @@
         {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
+        {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
         {erlydtl, ".*", {git, "git://github.com/OJ/erlydtl.git", "HEAD"}}
        ]}.
 
