add database pool, reduce logging

--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,7 @@
                                {branch, "upnp_fix"}}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
         {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
+        {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", "HEAD"}},
         {erlydtl, ".*", {git, "git://github.com/OJ/erlydtl.git", "HEAD"}}
        ]}.
 
