--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -11,6 +11,13 @@
    {clean_interval, 2700},          % database garbage clearing interval
    {scrape_request_interval, 1800}, % minimum number of seconds to wait before
                                     % scraping the tracker again
+   {db, {
+      [{worker_module, etracker_mnesia},
+       {size, 16}, {max_overflow, 32}
+      ],
+      [{timeout, 60000}]            % how many seconds wait for tables
+     }
+   },
    {db_module, {etracker_mnesia, []}}, % which database module to use and its options
                                        % options for mnesia:
                                        % [
@@ -29,7 +36,8 @@
  {lager,                         % logger configuration
   [{handlers,
     [
-     {lager_console_backend, [error, true]},          % [debug | info | error, true | false]
+     {crash_log_msg_size, 1024},
+     {lager_console_backend, none},          % [debug | info | error]
      {lager_file_backend,
       [ % comment lines you don't want logging for
         % {"log/debug.log", debug, 10485760, "$D0", 5},
@@ -38,8 +46,10 @@
       ]}
     ]}
   ]},
- {kernel,
-  [{start_timer, true}]},
+ {kernel, [
+           {start_timer, true},
+           {error_logger, silent}
+          ]},
  {sasl, [
          {sasl_error_logger, {file, "log/sasl-error.log"}},
          {errlog_type, error},
