--- a/etracker.config
+++ b/etracker.config
@@ -5,7 +5,13 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
-   {db_module, etracker_mnesia},
+   {db, {
+      [{worker_module, etracker_mnesia},
+       {size, 5}, {max_overflow, 10}
+      ],
+      [{timeout, 60000}]
+     }
+   },
    {db_cache_size, 1000000},  % entries
    {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
    {answer_compact, false},
