change schema type to mnesia

--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -11,18 +11,14 @@
    {clean_interval, 2700},          % database garbage clearing interval
    {scrape_request_interval, 1800}, % minimum number of seconds to wait before
                                     % scraping the tracker again
-   {db, {
+   {db_pool, {
       [{worker_module, etracker_mnesia},
        {size, 16}, {max_overflow, 32}
       ],
       [{timeout, 60000}]            % how many seconds wait for tables
      }
    },
-   {db_module, {etracker_mnesia, []}}, % which database module to use and its options
-                                       % options for mnesia:
-                                       % [
-                                       % {timeout, 60000} how many seconds wait for tables
-                                       % ]
+   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
    {db_cache_size, 1000000},  % entries
    {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
    {www_dir, "www"}
