--- a/etracker.config
+++ b/etracker.config
@@ -5,14 +5,25 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
+   %% {db_pool, {
+   %%    [{worker_module, etracker_mnesia},
+   %%     {size, 5}, {max_overflow, 10}
+   %%    ],
+   %%    [{timeout, 60000}]
+   %%   }
+   %% },
+   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
    {db_pool, {
-      [{worker_module, etracker_mnesia},
-       {size, 5}, {max_overflow, 10}
+      [{worker_module, etracker_pgsql},
+       {size, 1}, {max_overflow, 0}
       ],
-      [{timeout, 60000}]
+      [{hostname, "127.0.0.1"},
+       {database, "etracker"},
+       {username, "etracker"},
+       {password, "etracker"},
+       {timeout, 30000}]
      }
    },
-   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
    {db_cache_size, 1000000},  % entries
    {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
    {answer_compact, false},
