--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
 {deps, [
         {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}},
+        {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "HEAD"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
         {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
         {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", "HEAD"}},
