--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -30,9 +30,9 @@
    {dc_dump_limit, 10}
   ]},
  {lager,                         % logger configuration
-  [{handlers,
+  [{crash_log_msg_size, 1024},
+   {handlers,
     [
-     {crash_log_msg_size, 1024},
      {lager_console_backend, none},          % [debug | info | error]
      {lager_file_backend,
       [ % comment lines you don't want logging for
