--- a/test.config
+++ b/test.config
@@ -5,14 +5,26 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
+%%   {db_pool, {
+%%      [{worker_module, etracker_mnesia},
+%%       {size, 1}, {max_overflow, 0}
+%%      ],
+%%      [{timeout, 60000}]
+%%     }
+%%   },
+%%   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
    {db_pool, {
-      [{worker_module, etracker_mnesia},
+      [{worker_module, etracker_pgsql},
        {size, 1}, {max_overflow, 0}
       ],
-      [{timeout, 60000}]
+      [{hostname, "127.0.0.1"},
+       {database, "etracker"},
+       {username, "etracker"},
+       {password, "etracker"},
+       {timeout, 30000}]
      }
    },
-   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
+   {db_mgr, {etracker_pgsql_mgr, []}},
    {db_cache_size, 1000000},  % entries, undefined means unlimited
    {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
    {answer_compact, false},
@@ -28,7 +40,7 @@
   ]},
  {lager,
   [{handlers,
-    [{lager_console_backend, [info, true]}
+    [{lager_console_backend, info}
  %%     {lager_file_backend,
  %%      [{"log/error.log", error, 10485760, "$D0", 5},
  %%       {"log/console.log", info, 10485760, "$D0", 5},
