added ets backend, some fixes

--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,7 @@
         {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}},
         {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "HEAD"}},
+        %% {hanoidb, ".*", {git, "git://github.com/basho-labs/hanoidb.git", "master"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
         {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
         {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", "HEAD"}},
