--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -14,6 +14,7 @@
          gproc,
          rlimit,
          cowboy,
+         epgsql,
          etracker
         ]},
        {rel, "start_clean", "",
@@ -30,7 +31,8 @@
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
        {app, etracker, [{mod_cond, app}, {incl_cond, include}]},
-       {app, hipe, [{incl_cond, exclude}]}
+       {app, hipe, [{incl_cond, exclude}]},
+       {app, epgsql, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
 {target_dir, "etracker"}.
