--- a/etracker.config
+++ b/etracker.config
@@ -4,32 +4,48 @@
   [
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
-   {http_num_acceptors, 16},
+   {http_num_acceptors, 64},
+   %%   {db_pool, {
+   %%      [{worker_module, etracker_mnesia},
+   %%       {size, 1}, {max_overflow, 0}
+   %%      ],
+   %%      [{timeout, 60000}]
+   %%     }
+   %%   },
+   %%   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
+
    %% {db_pool, {
-   %%    [{worker_module, etracker_mnesia},
-   %%     {size, 5}, {max_overflow, 10}
+   %%    [{worker_module, etracker_pgsql},
+   %%     {size, 1}, {max_overflow, 0}
    %%    ],
-   %%    [{timeout, 60000}]
+   %%    [{hostname, "127.0.0.1"},
+   %%     {database, "etracker"},
+   %%     {username, "etracker"},
+   %%     {password, "etracker"},
+   %%     {timeout, 30000}]
    %%   }
    %% },
-   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
+   %% {db_mgr, {etracker_pgsql_mgr, []}},
+
    {db_pool, {
-      [{worker_module, etracker_pgsql},
-       {size, 1}, {max_overflow, 0}
+      [{worker_module, etracker_ets},
+       {size, 64}, {max_overflow, 96}
       ],
-      [{hostname, "127.0.0.1"},
-       {database, "etracker"},
-       {username, "etracker"},
-       {password, "etracker"},
-       {timeout, 30000}]
+      []
      }
    },
+   {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"},
+                                {dump_interval, 3600},
+                                %% {db_type, ets}
+                                {db_type, dict}
+                               ]}},
+
    {db_cache_size, 1000000},  % entries
-   {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
+   {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
-   {clean_interval, 2700},
+   {clean_interval, 270000},
    {scrape_request_interval, 1800},
    {www_dir, "www"}
   ]},
@@ -136,11 +152,11 @@
   ]},
  {lager,
   [{handlers,
-    [{lager_console_backend, [debug, true]},
+    [{lager_console_backend, info},
      {lager_file_backend,
-      [{"log/error.log", error, 10485760, "$D0", 5},
-       {"log/console.log", info, 10485760, "$D0", 5},
-       {"log/debug.log", debug, 10485760, "$D0", 5}
+      [{"log/error.log", error, 10485760, "$D0", 5}
+       %, {"log/info.log", info, 10485760, "$D0", 5}
+       %, {"log/debug.log", debug, 10485760, "$D0", 5}
       ]}
     ]}
   ]},
