--- a/test.config
+++ b/test.config
@@ -5,26 +5,50 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
-%%   {db_pool, {
-%%      [{worker_module, etracker_mnesia},
-%%       {size, 1}, {max_overflow, 0}
-%%      ],
-%%      [{timeout, 60000}]
-%%     }
-%%   },
-%%   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
+   %%   {db_pool, {
+   %%      [{worker_module, etracker_mnesia},
+   %%       {size, 1}, {max_overflow, 0}
+   %%      ],
+   %%      [{timeout, 60000}]
+   %%     }
+   %%   },
+   %%   {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
+
+   %% {db_pool, {
+   %%    [{worker_module, etracker_pgsql},
+   %%     {size, 1}, {max_overflow, 0}
+   %%    ],
+   %%    [{hostname, "127.0.0.1"},
+   %%     {database, "etracker"},
+   %%     {username, "etracker"},
+   %%     {password, "etracker"},
+   %%     {timeout, 30000}]
+   %%   }
+   %% },
+   %% {db_mgr, {etracker_pgsql_mgr, []}},
+
+   %% {db_pool, {
+   %%    [{worker_module, etracker_ets},
+   %%     {size, 1}, {max_overflow, 0}
+   %%    ],
+   %%    []
+   %%   }
+   %% },
+   %% {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
+   %%                              %% , {db_type, dict}
+   %%                              , {db_type, ets}
+   %%                             ]}},
+
    {db_pool, {
-      [{worker_module, etracker_pgsql},
+      [{worker_module, etracker_hanoidb},
        {size, 1}, {max_overflow, 0}
       ],
-      [{hostname, "127.0.0.1"},
-       {database, "etracker"},
-       {username, "etracker"},
-       {password, "etracker"},
-       {timeout, 30000}]
+      []
      }
    },
-   {db_mgr, {etracker_pgsql_mgr, []}},
+   {db_mgr, {etracker_hanoidb_mgr, [{dir, "etracker_data"}
+                                   ]}},
+
    {db_cache_size, 1000000},  % entries, undefined means unlimited
    {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
    {answer_compact, false},
