upgrade to latest cowboy, add file cache for full scrape, add udp

--- a/etracker.config
+++ b/etracker.config
@@ -5,6 +5,11 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 64},
+
+   {udp_port, 8080},
+   {udp_ip, "127.0.0.1"},
+   {udp_max_connections, 1024},
+
    %%   {db_pool, {
    %%      [{worker_module, etracker_mnesia},
    %%       {size, 1}, {max_overflow, 0}
@@ -40,8 +45,11 @@
                                 {db_type, dict}
                                ]}},
 
-   {db_cache_size, 1000000},  % entries
-   {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
+   {db_cache_size, 1000000},     % entries
+   {db_cache_peers_ttl, 0},      % seconds, 0 means no cache
+   {db_cache_full_scrape_ttl, 120},
+   {db_cache_dir, "etracker_data"},
+
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
@@ -152,7 +160,7 @@
   ]},
  {lager,
   [{handlers,
-    [{lager_console_backend, info},
+    [{lager_console_backend, debug},
      {lager_file_backend,
       [{"log/error.log", error, 10485760, "$D0", 5}
        %, {"log/info.log", info, 10485760, "$D0", 5}
