--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -5,6 +5,11 @@
    {http_port, 8080},               % port to listen for requests
    {http_ip, "127.0.0.1"},          % server address
    {http_num_acceptors, 32},        % pool of request acceptors
+
+   {udp_port, 8080},
+   {udp_ip, "127.0.0.1"},
+   {udp_max_connections, 1024},
+
    {answer_compact, false},         % always return compact list of peers
    {answer_max_peers, 50},          % max number of peers to return
    {answer_interval, 1800},         % client interval value in answer to announce
@@ -21,6 +26,9 @@
    {db_mgr, {etracker_mnesia_mgr, [{timeout, 60000}, {dump_interval, 3600}]}},
    {db_cache_size, 1000000},  % entries
    {db_cache_peers_ttl, 120}, % seconds, 0 means no cache
+   {db_cache_full_scrape_ttl, 300},
+   {db_cache_dir, "etracker_data"},
+
    {www_dir, "www"}
   ]},
  {mnesia,
