--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -13,6 +13,7 @@
          mnesia,
          gproc,
          rlimit,
+         ranch,
          cowboy,
          epgsql,
          etracker
@@ -32,7 +33,8 @@
        {excl_app_filters, ["\.gitignore"]},
        {app, etracker, [{mod_cond, app}, {incl_cond, include}]},
        {app, hipe, [{incl_cond, exclude}]},
-       {app, epgsql, [{mod_cond, app}, {incl_cond, include}]}
+       {app, epgsql, [{mod_cond, app}, {incl_cond, include}]},
+       {app, mimetypes, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
 {target_dir, "etracker"}.
