--- a/test.config
+++ b/test.config
@@ -5,6 +5,11 @@
    {http_port, 8080},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
+
+   {udp_port, 8080},
+   {udp_ip, "127.0.0.1"},
+   {udp_max_connections, 1024},
+
    %%   {db_pool, {
    %%      [{worker_module, etracker_mnesia},
    %%       {size, 1}, {max_overflow, 0}
@@ -27,30 +32,23 @@
    %% },
    %% {db_mgr, {etracker_pgsql_mgr, []}},
 
-   %% {db_pool, {
-   %%    [{worker_module, etracker_ets},
-   %%     {size, 1}, {max_overflow, 0}
-   %%    ],
-   %%    []
-   %%   }
-   %% },
-   %% {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
-   %%                              %% , {db_type, dict}
-   %%                              , {db_type, ets}
-   %%                             ]}},
-
    {db_pool, {
-      [{worker_module, etracker_hanoidb},
+      [{worker_module, etracker_ets},
        {size, 1}, {max_overflow, 0}
       ],
       []
      }
    },
-   {db_mgr, {etracker_hanoidb_mgr, [{dir, "etracker_data"}
-                                   ]}},
+   {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
+                                %% , {db_type, dict}
+                                , {db_type, ets}
+                               ]}},
 
    {db_cache_size, 1000000},  % entries, undefined means unlimited
    {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
+   {db_cache_full_scrape_ttl, 0},
+   {db_cache_dir, "etracker_data"},
+
    {answer_compact, false},
    {answer_max_peers, 50},
    {answer_interval, 1800},
