switch tol new lager, minor cleanup

--- a/etracker.config
+++ b/etracker.config
@@ -158,19 +158,33 @@
    %% Enable profiling; do not enable unless you need it
    {profiling, false}
   ]},
- {lager,
-  [{handlers,
-    [{lager_console_backend, debug},
-     {lager_file_backend,
-      [{"log/error.log", error, 10485760, "$D0", 5}
-       %, {"log/info.log", info, 10485760, "$D0", 5}
-       %, {"log/debug.log", debug, 10485760, "$D0", 5}
+   {lager,
+  [{error_logger_hwm, 100}
+   , {async_threshold, 20}
+   , {crash_log, "log/crash.log"}
+   , {crash_log_msg_size, 1024}
+   , {crash_log_size, 10485760}
+   , {crash_log_date, "$D0"}
+   , {crash_log_count, 5}
+   , {handlers,
+      [{lager_console_backend,
+        [debug, {lager_default_formatter, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}]}
+       , {lager_file_backend, [{file, "log/error.log"}, {level, error}
+                               , {size, 10485760}, {date, "$D0"}, {count, 5}
+                               , {formatter, lager_default_formatter}
+                               , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
+                              ]}
+       , {lager_file_backend, [{file, "log/info.log"}, {level, '<=warning'}
+                               , {size, 10485760}, {date, "$D0"}, {count, 5}
+                               , {formatter, lager_default_formatter}
+                               , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
+                              ]}
+
       ]}
-    ]}
   ]},
  {kernel,
-         [{start_timer, true}]},
+  [{start_timer, true}]},
  {sasl,
-        [{sasl_error_logger, {file, "log/sasl/sasl-error.log"}},
-         {errlog_type, error}]}
+  [{sasl_error_logger, {file, "log/sasl/sasl-error.log"}},
+   {errlog_type, error}]}
 ].
