--- a/rebar.config
+++ b/rebar.config
@@ -13,8 +13,8 @@
 {deps, [
         {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}},
+        {lager, "2.0.0", {git, "git://github.com/basho/lager.git", {tag, "2.0.0"}}},
         {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "HEAD"}},
-        %% {hanoidb, ".*", {git, "git://github.com/basho-labs/hanoidb.git", "master"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
         {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
         {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", "HEAD"}},
