--- a/rel/files/sys.config
+++ b/rel/files/sys.config
@@ -1,6 +1,6 @@
 %% -*- mode: Erlang; -*-
 [
-  {etracker,
+ {etracker,
   [
    {http_port, 8080},               % port to listen for requests
    {http_ip, "127.0.0.1"},          % server address
@@ -15,7 +15,7 @@
    {answer_interval, 1800},         % client interval value in answer to announce
    {clean_interval, 2700},          % database garbage clearing interval
    {scrape_request_interval, 1800}, % minimum number of seconds to wait before
-                                    % scraping the tracker again
+                                                % scraping the tracker again
    {db_pool, {
       [{worker_module, etracker_mnesia},
        {size, 32}, {max_overflow, 64}
@@ -37,18 +37,30 @@
    {dump_log_write_threshold, 50000},
    {dc_dump_limit, 10}
   ]},
- {lager,                         % logger configuration
-  [{crash_log_msg_size, 1024},
-   {handlers,
-    [
-     {lager_console_backend, none},          % [debug | info | error]
-     {lager_file_backend,
-      [ % comment lines you don't want logging for
-        % {"log/debug.log", debug, 10485760, "$D0", 5},
-        {"log/info.log", info, 10485760, "$D0", 5},
-        {"log/error.log", error, 10485760, "$D0", 5}
+ {lager,
+  [{error_logger_hwm, 50}
+   , {async_threshold, 50}
+   , {crash_log, "log/crash.log"}
+   , {crash_log_msg_size, 1024}
+   , {crash_log_size, 10485760}
+   , {crash_log_date, "$D0"}
+   , {crash_log_count, 5}
+   , {handlers,
+      [
+       %% {lager_console_backend,
+       %%  [info, {lager_default_formatter, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}]},
+       {lager_file_backend, [{file, "log/error.log"}, {level, error}
+                             , {size, 10485760}, {date, "$D0"}, {count, 5}
+                             , {formatter, lager_default_formatter}
+                             , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
+                            ]},
+       {lager_file_backend, [{file, "log/info.log"}, {level, '<=warning'}
+                             , {size, 10485760}, {date, "$D0"}, {count, 5}
+                             , {formatter, lager_default_formatter}
+                             , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
+                            ]}
+
       ]}
-    ]}
   ]},
  {kernel, [
            {start_timer, true},
