--- a/rebar.config
+++ b/rebar.config
@@ -21,4 +21,4 @@
         {erlydtl, ".*", {git, "git://github.com/OJ/erlydtl.git", "HEAD"}}
        ]}.
 
-{sub_dirs, ["apps/etracker","rel"]}.
+{sub_dirs, []}.
