change lager config

--- a/test.config
+++ b/test.config
@@ -77,7 +77,7 @@
                                , {formatter, lager_default_formatter}
                                , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
                               ]}
-       , {lager_file_backend, [{file, "log/info.log"}, {level, '<=warning'}
+       , {lager_file_backend, [{file, "log/info.log"}, {level, info}
                                , {size, 10485760}, {date, "$D0"}, {count, 5}
                                , {formatter, lager_default_formatter}
                                , {formatter_config, [date, " ", time," [",severity,"] ", pid, " ", {module, "?"}, ":", {line, "?"}, " ", message, "\n"]}
