fix dets opening and saving, some fixes

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 
-{require_otp_vsn, "R15"}.
+%%{require_otp_vsn, "R15"}.
 
 {cover_enabled, true}.
 
