--- a/test.config
+++ b/test.config
@@ -2,11 +2,11 @@
 [
  {etracker,
   [
-   {http_port, 8080},
+   {http_port, 8181},
    {http_ip, "127.0.0.1"},
    {http_num_acceptors, 16},
 
-   {udp_port, 8080},
+   {udp_port, 8181},
    {udp_ip, "127.0.0.1"},
    {udp_max_connections, 1024},
 
@@ -104,7 +104,7 @@
    %% The dht entry enables the DHT subsystem, it is used to
    %% retrieve information of which peers are available if there
    %% are no trackers available.
-   {dht, true },
+   {dht, false },
 
    %% The DHT subsystem will also bind to all interfaces.
    {dht_port, 6882 },
@@ -115,7 +115,7 @@
 
    %% Enable UPnP subsystem, which tries to open port mappings in
    %% UPnP-aware routers for etorrent.
-   {use_upnp, true },
+   {use_upnp, false },
 
    %% The directory to watch for .torrent files and the directory to download data into
    {dir, "/home/svg/etorrent/torrent_data"},
