refactoring, add munin plugin

--- a/rebar.config
+++ b/rebar.config
@@ -16,9 +16,12 @@
         {lager, "2.0.0", {git, "git://github.com/basho/lager.git", {tag, "2.0.0"}}},
         {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "HEAD"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
-        {cadfaerl, ".*", {git, "git://github.com/ddossot/cadfaerl.git", "HEAD"}},
+        {etsachet, ".*", {git, "git://github.com/eryx67/etsachet.git", "HEAD"}},
+        {gencron, ".*", {git, "git://github.com/eryx67/gencron.git", "HEAD"}},
         {poolboy, ".*", {git, "git://github.com/devinus/poolboy.git", "HEAD"}},
-        {erlydtl, ".*", {git, "git://github.com/OJ/erlydtl.git", "HEAD"}}
+        {safetyvalve, ".*", {git, "git://github.com/jlouis/safetyvalve.git", "HEAD"}},
+        {folsom, ".*", {git, "git://github.com/boundary/folsom", "master"}},
+        {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "HEAD"}}
        ]}.
 
 {sub_dirs, []}.
