update to latest cowboy

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info, fail_on_warning, {parse_transform, lager_transform}]}.
 
-%%{require_otp_vsn, "R15"}.
+%%{require_otp_vsn, "R16|17"}.
 
 {cover_enabled, true}.
 
@@ -13,7 +13,7 @@
 {deps, [
         {etorrent_core, ".*", {git,     "git://github.com/eryx67/etorrent_core.git",
                                {branch, "upnp_fix"}}},
-        {lager, "2.0.0", {git, "git://github.com/basho/lager.git", {tag, "2.0.0"}}},
+        {lager, ".*", {git, "git://github.com/basho/lager.git", {tag, "2.1.0"}}},
         {epgsql, ".*", {git, "git://github.com/wg/epgsql.git", "HEAD"}},
         {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", "HEAD"}},
         {etsachet, ".*", {git, "git://github.com/eryx67/etsachet.git", "HEAD"}},
