--- a/test.config
+++ b/test.config
@@ -30,8 +30,8 @@
      }
    },
    {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
-                                %% , {db_type, dict}
-                                , {db_type, ets}
+                               , {db_type, dict}
+                                %%, {db_type, ets}
                                ]}},
 
    {db_cache_size, 1000000},  % entries, undefined means unlimited
