add mnesia fragmented backend

--- a/etracker.config
+++ b/etracker.config
@@ -21,18 +21,29 @@
    %%   }
    %% },
    %% {db_mgr, {etracker_pgsql_mgr, []}},
+   %% {db_pool, {
+   %%    [{worker_module, etracker_ets},
+   %%     {size, 64}, {max_overflow, 96}
+   %%    ],
+   %%    []
+   %%   }
+   %% },
+   %% {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"},
+   %%                              {dump_interval, 3600},
+   %%                              %% {db_type, ets}
+   %%                              {db_type, dict}
+   %%                             ]}},
+
    {db_pool, {
-      [{worker_module, etracker_ets},
+      [{worker_module, etracker_mnesia},
        {size, 64}, {max_overflow, 96}
       ],
       []
      }
    },
-   {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"},
-                                {dump_interval, 3600},
-                                %% {db_type, ets}
-                                {db_type, dict}
-                               ]}},
+   {db_mgr, {etracker_mnesia_mgr, [{dir, "etracker_data"},
+                                   {dump_interval, 3600}
+                                  ]}},
 
    {db_cache_size, 1000000},     % entries
    {db_cache_peers_ttl, 120},      % seconds, 0 means no cache
