--- a/test.config
+++ b/test.config
@@ -22,17 +22,26 @@
    %% },
    %% {db_mgr, {etracker_pgsql_mgr, []}},
 
+   %% {db_pool, {
+   %%    [{worker_module, etracker_ets},
+   %%     {size, 1}, {max_overflow, 0}
+   %%    ],
+   %%    []
+   %%   }
+   %% },
+   %% {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
+   %%                             , {db_type, dict}
+   %%                              %%, {db_type, ets}
+   %%                             ]}},
+
    {db_pool, {
-      [{worker_module, etracker_ets},
+      [{worker_module, etracker_mnesia},
        {size, 1}, {max_overflow, 0}
       ],
       []
      }
    },
-   {db_mgr, {etracker_ets_mgr, [{dir, "etracker_data"}
-                               , {db_type, dict}
-                                %%, {db_type, ets}
-                               ]}},
+   {db_mgr, {etracker_mnesia_mgr, []}},
 
    {db_cache_size, 1000000},  % entries, undefined means unlimited
    {db_cache_peers_ttl, 0}, % seconds, 0 means no cache
